--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
       
     </div>
     <footer id="contacts" class="footer-menu">
-
+      <div class="telefon-number">Позвонить нам:<br><span>8 (495) 604-45-48</span></div>
+      <div class="address">
+        <div class="address_item">Наш адрес:<br><span>127473, г. Москва, ул. Селезневская, дом 11Б.</span></div>
+      </div>
     </footer>
   </div>
 </div>
