--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <li class="icons__item"><a href="#"><img src="img/vk.png" alt="VK" srcset=""></a></li>
           <li class="icons__item"><a href="#"><img src="img/whatsapp.png" alt="WhatsApp" srcset=""></a></li>
         </ul>
+        <p class="email">написать нам: <a href="mailto:tcsof@tcsof.ru">tcsof@tcsof.ru</a></p>
       </div>
     </header>
     <div class="presentation-block">
@@ -39,12 +40,19 @@
             <li class="inner-menu__item">Плодоовощное</li>
           </ul>
         </li>
-        <li class="content-menu__item">Транспортное направление</li>
+        <li class="content-menu__item">Транспортное направление
+          <ul class="inner-menu">
+            <li class="inner-menu__item">Автомобильные перевозки в странах СНГ</li>
+            <li class="inner-menu__item">Тенты</li>
+            <li class="inner-menu__item">Рефрижераторы</li>
+            <li class="inner-menu__item">Наливные грузы</li>
+          </ul>
+        </li>
       </ul>
-      
     </div>
     <footer id="contacts" class="footer-menu">
       <div class="telefon-number">Позвонить нам:<br><span>8 (495) 604-45-48</span></div>
+      <p class="email">написать нам: <a href="mailto:tcsof@tcsof.ru">tcsof@tcsof.ru</a></p>
       <div class="address">
         <div class="address_item">Наш адрес:<br><span>127473, г. Москва, ул. Селезневская, дом 11Б.</span></div>
       </div>
