--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <div class="wrap">
     <header>
       <ul class="menu">
-        <li class="menu_item"><a href="">О нас</a></li>
-        <li class="menu_item"><a href="#content">Деятельность</a></li>
-        <li class="menu_item"><a href="#contacts">Контакты</a></li>
+        <li class="menu__item"><a href="#">О нас</a></li>
+        <li class="menu__item"><a href="#content">Деятельность</a></li>
+        <li class="menu__item"><a href="#contacts">Контакты</a></li>
       </ul>
       <div class="header-contacts">
         <p class="telefon">+7(495)604-45-48</p>
@@ -24,7 +24,7 @@
           <li class="icons__item"><a href="#"><img src="img/vk.png" alt="VK" srcset=""></a></li>
           <li class="icons__item"><a href="#"><img src="img/whatsapp.png" alt="WhatsApp" srcset=""></a></li>
         </ul>
-        <p class="email">написать нам: <a href="mailto:tcsof@tcsof.ru">tcsof@tcsof.ru</a></p>
+        <p class="email"><a href="mailto:tcsof@tcsof.ru">tcsof@tcsof.ru</a></p>
       </div>
     </header>
     <div class="presentation-block">
@@ -40,9 +40,9 @@
             <li class="inner-menu__item">Плодоовощное</li>
           </ul>
         </li>
-        <li class="content-menu__item">Транспортное направление
+        <li class="content-menu__item">Транспортное направление</li>
+        <li class="content-menu__item">Автомобильные перевозки в странах СНГ 
           <ul class="inner-menu">
-            <li class="inner-menu__item">Автомобильные перевозки в странах СНГ</li>
             <li class="inner-menu__item">Тенты</li>
             <li class="inner-menu__item">Рефрижераторы</li>
             <li class="inner-menu__item">Наливные грузы</li>
