--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="wrap">
     <header>
       <ul class="menu">
-        <li class="menu__item"><a href="#">О нас</a></li>
+        <li class="menu__item"><a href="#about-us">О нас</a></li>
         <li class="menu__item"><a href="#content">Деятельность</a></li>
         <li class="menu__item"><a href="#contacts">Контакты</a></li>
       </ul>
@@ -31,16 +31,97 @@
       <p class="big-text">ТК "Софийская"</p>
       <p class="small-text"><span>Ответственность.</span><span>Качество.</span><span>Партнерство.</span></p>
     </div>
+    <div class="about-us">
+      <div id="about-us" class="about-us__block">
+        <p class="name-block">О нас</p>
+        <div class="text-block">
+          <p>Общество с ограниченной ответственностью ТК «Софийская» было создано
+            в 2015 г.</p>
+          <p>За годы безупречной работы компания проявила себя как надежный бизнес-
+            партнер, строго выполняющий свои обязательства.</p>
+          <p>Слаженная работа коллектива компании позволяет обеспечивать
+            эффективную работу по основным видам деятельности, гарантируя клиентам
+            необходимое качество выполнения услуг.</p>
+          <p>Основными направлениями деятельности являются оптовая торговля
+            молочной (сухое цельное и обезжиренное молоко, сливки пастеризованные,
+            масло сливочное, сыры), мясной (мясо, мясные полуфабрикаты) и
+            плодоовощной (свежие плоды, овощи, плодоовощные консервы) продукцией.
+            А также оказание клиентам транспортных услуг.</p>
+          <p>Начав свою деятельность на рынке транспортно-логистических услуг по
+            организации и доставке пищевых грузов из Республики Беларусь в Россию,
+            компания смогла вырасти и диверсифицировать свою деятельность по
+            импорту пищевого сырья и продукции, в первую очередь молочной отрасли,
+            производимой ведущими белорусскими предприятиями.</p>
+          <p>Продуманная финансовая политика, надежные партнеры, высокое качество
+            продукции позволило не снижать набранные обороты и продолжать
+            успешное развитие компании в настоящее время.</p>
+          <p>Наша стратегия – точный расчет и контроль всех элементов логистической
+            цепочки. Возможность вовремя предложить нашим клиентам услугу и
+            решение, которые повысят их конкурентноспособность на рынке. Нашими
+            клиентами являются ведущие производители пищевой промышленности
+            России, Беларуси. Держать слово – один из важнейших принципов нашей
+            компании. Мы выполняем то, что нужно нашим заказчикам.</p>
+          <p>Сотрудники ТК Софийская всегда рады продуктивному сотрудничеству,
+            обеспечивая успешность вашего бизнеса вместе с нами.</p>
+        </div>
+      </div>
+    </div>
     <div id="content" class="content-block">
       <ul class="content-menu">
-        <li class="content-menu__item">Пищевое направление 
+        <li class="content-menu__item">Пищевое направление
+          <p class="content-menu__item--text">ТК «Софийская» - динамично развивающаяся компания, работающая
+            на рынке России, стран ЕАЭС и ближнего зарубежья в сегменте оптовых
+            продаж продуктами:</p>
           <ul class="inner-menu">
-            <li class="inner-menu__item">Молочное</li>
-            <li class="inner-menu__item">Мясное</li>
-            <li class="inner-menu__item">Плодоовощное</li>
+            <li class="inner-menu__item">сухое цельное и обезжиренное молоко, сухая молочная сыворотка,
+              сыры, сливочное масло, молочные продукты наливом;</li>
+            <li class="inner-menu__item">мясо, мясные полуфабрикаты, колбасные изделия, консервы мясные;</li>
+            <li class="inner-menu__item">плодоовощная продукция (свежие плоды, овощи, грибы), ягоды и
+              овощи в замороженном виде, плодоовощные консервы.</li>
           </ul>
+          <p class="content-menu__item--text">Наша специализация – снабжение пищевых предприятий и торговых
+            компаний России сырьем высокого качества.</p>
+          <p class="content-menu__item--text">Основной объем продаж компании приходится на сухое цельное и
+            обезжиренное молоко, сухую молочную сыворотку, пастеризованные сливки
+            наливом, а также сливочное масло и сыры.</p>
+          <p class="content-menu__item--text">Гарантией качества является полное соответствие продаваемой
+            продукции ГОСТу и Техническому регламенту на молоко и молочную
+            продукцию.</p>
+          <p class="content-menu__item--text">При этом важно отметить, что мы осуществляем поставки продукции
+            как глобальным транснациональным корпорациям и государственным
+            организациям, так и региональным и местным предприятиям
+            перерабатывающей промышленности.</p>
         </li>
-        <li class="content-menu__item">Транспортное направление</li>
+        <li class="content-menu__item">Транспортное направление
+          <p class="content-menu__item--text">Автомобильные перевозки в последнее время являются
+            высококонкурентным бизнесом, и в такой ситуации добиться успеха
+            транспортным компаниям позволяет только профессионализм и надежность.
+            Возможность использовать более 60 специализированных автопоездов,
+            седельные тягачи марки Mercedes-Benz, VOLVO, DAF, РЕНО, современные
+            молокоцистерны европейского производства позволяют подобрать нашей
+            компании автомобиль под любой вид пищевого груза, в том числе наливного.
+            Это – тенты, сертифицированные прицепы-рефрижераторы, которые
+            подходят для доставки продукции, не требующей соблюдение
+            температурного режима, а также рефрижераторы, поддерживающие
+            определенный температурный режим. Все рефрижераторы имеют
+            действительный международный сертификат FRC, санитарный паспорт.</p>
+          <p class="content-menu__item--text">На сегодняшний день основной объем грузоперевозок ТК «Софийская»
+            занимает пищевая продукция: сухое цельное и обезжиренное молоко, сухая
+            молочная сыворотка, сыры, сливочное масло, пастеризованные сливки
+            наливом. Также перевозим мясо, мясные полуфабрикаты, колбасные изделия,
+            консервы мясные и плодоовощную продукцию: свежие плоды, овощи, грибы,
+            в замороженном виде, плодоовощные консервы.</p>
+          <p class="content-menu__item--text">Перевозка наливных молочных грузов требует особого внимания,
+            соблюдения определенных условий, поэтому осуществляется в
+            изотермических цистернах из нержавеющей стали, способных предотвратить
+            нагревание и порчу продукта в любую жару с соблюдением всех санитарно-
+            гигиенических норм и правил. Транспортировка выполняется
+            профессиональными водителями с соблюдением требования заказчиков по
+            срокам доставки скоропортящегося груза.</p>
+          <p class="content-menu__item--text">ТК «Софийская», начав свою деятельность на рынке России и
+            Беларуси, расширила географию перевозок в рамках содружества
+            независимых государств и стран ближнего зарубежья.</p>
+        </li>
         <li class="content-menu__item">Автомобильные перевозки в странах СНГ 
           <ul class="inner-menu">
             <li class="inner-menu__item">Тенты</li>
