--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
     <div id="content" class="content-block">
       <ul class="content-menu">
-        <li class="content-menu__item">Пищевое направление
+        <li class="content-menu__item">Оптовая торговля продуктами питания
           <p class="content-menu__item--text">ТК «Софийская» - динамично развивающаяся компания, работающая
             на рынке России, стран ЕАЭС и ближнего зарубежья в сегменте оптовых
             продаж продуктами:</p>
@@ -92,7 +92,7 @@
             организациям, так и региональным и местным предприятиям
             перерабатывающей промышленности.</p>
         </li>
-        <li class="content-menu__item">Транспортное направление
+        <li class="content-menu__item">Автомобильные перевозки в странах СНГ
           <p class="content-menu__item--text">Автомобильные перевозки в последнее время являются
             высококонкурентным бизнесом, и в такой ситуации добиться успеха
             транспортным компаниям позволяет только профессионализм и надежность.
@@ -122,7 +122,7 @@
             Беларуси, расширила географию перевозок в рамках содружества
             независимых государств и стран ближнего зарубежья.</p>
         </li>
-        <li class="content-menu__item">Автомобильные перевозки в странах СНГ 
+        <li class="content-menu__item"> 
           <ul class="inner-menu">
             <li class="inner-menu__item">Тенты</li>
             <li class="inner-menu__item">Рефрижераторы</li>
